sfdx-source/main/default/objects/VCC_VistA_Terminology__c/fields/VCC_Appointment_Types__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Types__c</fullName>
    <description>Name of the appointment type, i.e. Class II Dental is designated for veterans who are scheduling an appointment to be treated for a dental condition that was related to active duty.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Types</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>