sfdx-source/main/default/objects/VCC_VistA_Terminology__c/fields/VCC_Clinic_Cancellation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>VCC_Clinic_Cancellation_Reasons__c</fullName>
    <description>Reason for cancelling an appointment by the clinic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinic Cancellation Reasons</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>