sfdx-source/main/default/objects/VCC_VistA_Terminology__c/fields/VCC_Disposition_Reasons__c.field-meta.xml
<CustomField>
    <fullName>VCC_Disposition_Reasons__c</fullName>
    <description>This field represents the reason this patient has been dispositioned from this appointment request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Disposition Reasons</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>