sfdx-source/main/default/objects/VCC_VistA_Terminology__c/fields/VCC_Patient_Cancellation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient_Cancellation_Reasons__c</fullName>
    <description>Reason for cancelling an appointment by the patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Cancellation Reasons</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>