sfdx-source/main/default/objects/VCC_VistA_Terminology__c/fields/VCC_Recall_Reminder_Appointment_Types__c.field-meta.xml
<CustomField>
    <fullName>VCC_Recall_Reminder_Appointment_Types__c</fullName>
    <description>Type of Recall is asked when an Recall entry is made. This &quot;type&quot; is created by the Recall Coordinator, and is used as a description as why the Veteran will need a Recall made. Some examples: (Followup, 6Month Cleaning, }}{{and Yearly Exam).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recall Reminder Appointment Types</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>