sfdx-source/main/default/objects/VCC_VistA_Terminology__c/fields/VCC_VistA_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_VistA_Site_Id__c</fullName>
    <description>The VistA instance associated with this terminology record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VistA Site Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>